Fix typo in readme regarding dependencies

--- a/fastapi_mongo/readme
+++ b/fastapi_mongo/readme
@@ -1,1 +1,1 @@
-first create virtual environemnt and then install dependecies and then run project
+first create virtual environemnt and then install dependencies and then run project
